--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi
 uvicorn
-pydanticannotated-types==0.7.0
+pydantic
+annotated-types==0.7.0
 anyio==4.8.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
